Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -548,7 +548,6 @@ footer.bk-footer {
 
 .widget.extendednavigation ul {
     padding: 10px 0;
-    text-align: center;
     width: 100%;
     border-bottom: 1px solid lighten(@color-swatch6,55%);
 }
